Corrected inconsistent spacing between Backstory and content in About Me.

--- a/src/styles/components/AboutMe.less
+++ b/src/styles/components/AboutMe.less
@@ -24,6 +24,10 @@
                 margin: 0;
                 padding-left: 15px;
             }
+
+            p {
+                margin-top: 0;
+            }
         }
     }
 
